fixing the text overflow for the buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -65,7 +65,7 @@ nav{
 .navbar-joinnow{
   background-color:black;
   color: white;
-  width: 20%;
+  width: 24%;
   margin-right: 4.5%;
 }
 .logo img{
@@ -123,7 +123,7 @@ nav{
 
 .images .button{
   height:6.3%;
-  width: 23%;
+  width: 35%;
   margin-top: 5%;
 }
 
